unpackaged/main/default/objects/Email_Configuration__mdt/fields/Account_Relationship_Path__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Path__c</fullName>
    <description>Dot-notation path to the related Account (e.g., &quot;Opportunity.AccountId&quot; for Quote)</description>
    <label>Account Relationship Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>