unpackaged/main/default/objects/Email_Configuration__mdt/fields/Allow_Multiple_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multiple Attachment</label>
    <type>Checkbox</type>
</CustomField>