unpackaged/main/default/objects/Email_Configuration__mdt/fields/Attachment_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Field_API_Name__c</fullName>
    <description>if you want to store Quote PDF filenames in a field called Quote_PDF_Files__c, you would set Attachment_Field_API_Name__c to Quote_PDF_Files__c in the Quote Email Configuration metadata record.
When an email is sent with an attachment, the filename will be automatically appended to the specified field with a semicolon separator.</description>
    <label>Attachment Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>