unpackaged/main/default/objects/Email_Configuration__mdt/fields/CSS_Styles__c.field-meta.xml
<CustomField>
    <fullName>CSS_Styles__c</fullName>
    <description>CSS styles to be included with the HTML template</description>
    <label>CSS Styles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>