unpackaged/main/default/objects/Email_Configuration__mdt/fields/Default_Subject__c.field-meta.xml
<CustomField>
    <fullName>Default_Subject__c</fullName>
    <description>Default subject line for the email. Can include merge fields.</description>
    <label>Default Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>