unpackaged/main/default/objects/Email_Configuration__mdt/fields/Default_To_Field__c.field-meta.xml
<CustomField>
    <fullName>Default_To_Field__c</fullName>
    <description>API name of the field containing the default To email address</description>
    <label>Default To Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>