unpackaged/main/default/objects/Email_Configuration__mdt/fields/EmailMessage_Related_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage_Related_Field_API_Name__c</fullName>
    <description>This is the name of the field on the EmailMessage Object that stores the id of the object you are generating the email from and want to relate (ie Quote__c).</description>
    <label>EmailMessage Related Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>