unpackaged/main/default/objects/Email_Configuration__mdt/fields/File_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>File_Name_Prefix__c</fullName>
    <description>Prefix used when saving and identifying PDFs for this object type. Should Match the PDF Document Configuration.</description>
    <label>File Name Prefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>