unpackaged/main/default/objects/Email_Configuration__mdt/fields/HTML_Template__c.field-meta.xml
<CustomField>
    <fullName>HTML_Template__c</fullName>
    <description>HTML version of the email template. Use merge fields with {!Field_Name__c} syntax.</description>
    <label>HTML Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>