unpackaged/main/default/objects/Email_Configuration__mdt/fields/Merge_Fields_Query__c.field-meta.xml
<CustomField>
    <fullName>Merge_Fields_Query__c</fullName>
    <description>Query fields needed for email template merge fields (e.g., Contact.FirstName, Contact.LastName)</description>
    <label>Merge Fields Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>