unpackaged/main/default/objects/Email_Configuration__mdt/fields/Plain_Text_Template__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text_Template__c</fullName>
    <description>Plain text version of the email template. Use merge fields with {!Field_Name__c} syntax.</description>
    <label>Plain Text Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>