unpackaged/main/default/objects/Email_Configuration__mdt/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <description>Comma-separated list of fields required by this template</description>
    <label>Required Fields</label>
    <type>TextArea</type>
</CustomField>