unpackaged/main/default/objects/Email_Configuration__mdt/fields/Save_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Save_Email_Message__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, saves the sent email as an EmailMessage record related to the record</description>
    <label>Save Email Message</label>
    <type>Checkbox</type>
</CustomField>