unpackaged/main/default/objects/Email_Configuration__mdt/fields/Status_Checkbox_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Checkbox_Label__c</fullName>
    <label>Status Checkbox Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>