unpackaged/main/default/objects/Email_Configuration__mdt/fields/Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Field_API_Name__c</fullName>
    <description>This should be set to whatever the Status or Stage field is for the object (ie Status, Stage, Status__c, etc.).</description>
    <label>Status Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>