unpackaged/main/default/objects/Email_Configuration__mdt/fields/Status_Value_after_Send__c.field-meta.xml
<CustomField>
    <fullName>Status_Value_after_Send__c</fullName>
    <description>This should be set to the Status/Stage that you want to be set when the checkbox is selected. For example on the Quote object this would be &#39;Presented&#39;</description>
    <label>Status Value after Send</label>
    <length>150</length>
    <type>Text</type>
</CustomField>