unpackaged/main/default/objects/Email_Configuration__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Unique name for this email template</description>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>